--- a/public/.htaccess
+++ b/public/.htaccess
@@ -3,6 +3,7 @@ RewriteEngine On
 
 #RewriteCond %{REQUEST_FILENAME} !-f #vrai si le fichier n'existe pas
 #RewriteCond %{REQUEST_FILENAME} !-d #vrai si le dossier n'existe pas
-RewriteCond %{REQUEST_URI} !.+\.(css|js|png|jpg|gif)$
+
+RewriteCond %{REQUEST_URI} !.+\.(css|js|png|jpg|bmp)$
 
 RewriteRule . index.php [L]
