--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,8 @@
     },
     "require": {
         "altorouter/altorouter": "^2.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^10.4"
     }
 }
