--- a/public/.htaccess
+++ b/public/.htaccess
@@ -4,6 +4,6 @@ RewriteEngine On
 #RewriteCond %{REQUEST_FILENAME} !-f #vrai si le fichier n'existe pas
 #RewriteCond %{REQUEST_FILENAME} !-d #vrai si le dossier n'existe pas
 
-RewriteCond %{REQUEST_URI} !.+\.(css|js|png|jpg|bmp)$
+RewriteCond %{REQUEST_URI} !.+\.(css|js|png|jpg|bmp|jfif)$
 
 RewriteRule . index.php [L]
