--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Web development project for the association APEAJ",
     "authors": [
         {
-            "name": "Arthur Bourgoin",
+            "name": "Arthur Bourfoin",
             "email": "arthur.bourgoin@etu.iut-tlse3.fr"
         }
     ],
